[project]
name = "eia-mcp-gridsense"
version = "0.1.0"
description = "MCP server exposing US electricity grid data (fuel mix, demand, retail prices, CO2 emissions) from the EIA API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.urls]
Repository = "https://github.com/pranavbhosale25/eia-mcp-gridsense"

[project.scripts]
eia-mcp-gridsense = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
